Update digital resume with latest information and improvements
- Updated Header: Changed title to 'Strategic AI Product Manager' with AI focus
- Updated Experience: New job titles, achievements, and metrics from latest resume
- Updated Portfolio: Added AI Object Detection project, updated metrics and descriptions
- Updated Skills: Reorganized into 4 categories with latest technical skills
- Updated Chatbot: Latest resume content and comprehensive about information
- Fixed UI: Standardized colors, removed badges, improved card layouts
- Enhanced Content: Added Grounding DINO, RAG applications, M+ revenue impact

--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ankit - Digital Resume</title>
-    <meta name="description" content="Professional digital resume showcasing skills, experience, and achievements">
+    <title>Ankit Bansal - Product Manager Portfolio</title>
+    <meta name="description" content="Strategic Product Manager with 4 years of experience in B2B SaaS, AI-driven solutions, and cross-functional leadership. Explore case studies, projects, and achievements.">
+    <meta name="keywords" content="Product Manager, PM Portfolio, B2B SaaS, AI Products, Case Studies, Product Strategy, Ankit Bansal">
+    <meta property="og:title" content="Ankit Bansal - Product Manager Portfolio">
+    <meta property="og:description" content="Strategic Product Manager with 4 years of experience delivering innovative B2B SaaS products and AI-driven solutions.">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Ankit Bansal - Product Manager Portfolio">
+    <meta name="twitter:description" content="Strategic Product Manager with 4 years of experience delivering innovative B2B SaaS products and AI-driven solutions.">
   </head>
   <body>
     <div id="root"></div>
